# prototypeAI

./: CMakeLists.txt  main.cpp  main.h
src/algorithms/: activationFunction.cpp  activationFunction.h  backPropagation.cpp  backPropagation.h  propagation.cpp  propagation.h
src/networkMain/: networkMain.cpp  networkMain.h
src/networkMain/iteratorVector/: iteratorVector.cpp  iteratorVector.h
src/networkMain/layer/: layer.cpp  layer.h
src/networkMain/node/: node.cpp  node.h
